--- a/requirements_backup.txt
+++ b/requirements_backup.txt
@@ -1,8 +1,6 @@
 aiohttp==3.8.5
 aiosignal==1.3.1
 altair==5.0.1
-annotated-types==0.5.0
-anyio==3.7.1
 async-timeout==4.0.2
 attrs==23.1.0
 blinker==1.6.2
@@ -11,19 +9,14 @@ certifi==2023.7.22
 chardet==5.2.0
 charset-normalizer==3.2.0
 click==8.1.6
-colorama==0.4.6
 dataclasses-json==0.5.14
 decorator==5.1.1
-docx==0.2.4
-exceptiongroup==1.1.2
 faiss-gpu==1.7.2
-fastapi==0.101.0
 filetype==1.2.0
 frozenlist==1.4.0
 gitdb==4.0.10
 GitPython==3.1.32
 greenlet==2.0.2
-h11==0.14.0
 idna==3.4
 importlib-metadata==6.8.0
 Jinja2==3.1.2
@@ -46,22 +39,16 @@ openai==0.27.8
 openapi-schema-pydantic==1.2.4
 packaging==23.1
 pandas==2.0.3
-Pillow==10.0.0
+Pillow==9.5.0
 protobuf==4.23.4
 pyarrow==12.0.1
 pydantic==1.10.12
-pydantic_core==2.4.0
 pydeck==0.8.0
 Pygments==2.15.1
 Pympler==1.0.1
-pypdf==3.15.0
-PyPDF2==3.0.1
 python-dateutil==2.8.2
-python-docx==0.8.11
 python-dotenv==1.0.0
 python-magic==0.4.27
-python-multipart==0.0.6
-python-pptx==0.6.21
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0.1
@@ -72,9 +59,8 @@ rich==13.5.2
 rpds-py==0.9.2
 six==1.16.0
 smmap==5.0.0
-sniffio==1.3.0
 SQLAlchemy==2.0.19
-starlette==0.27.0
+streamlit==1.25.0
 tabulate==0.9.0
 tenacity==8.2.2
 tiktoken==0.4.0
@@ -88,9 +74,7 @@ tzdata==2023.3
 tzlocal==4.3.1
 unstructured==0.9.0
 urllib3==2.0.4
-uvicorn==0.23.2
 validators==0.20.0
 watchdog==3.0.0
-XlsxWriter==3.1.2
 yarl==1.9.2
 zipp==3.16.2
