--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ colorama==0.4.6
 dataclasses-json==0.5.14
 decorator==5.1.1
 docx==0.2.4
+docx2txt==0.8
 exceptiongroup==1.1.2
 faiss-gpu==1.7.2
 fastapi==0.101.0
