--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ anyio==3.7.1
 async-timeout==4.0.2
 attrs==23.1.0
 blinker==1.6.2
+bson==0.5.10
 cachetools==5.3.1
 certifi==2023.7.22
 chardet==5.2.0
@@ -14,6 +15,7 @@ click==8.1.6
 colorama==0.4.6
 dataclasses-json==0.5.14
 decorator==5.1.1
+dnspython==2.4.2
 docx==0.2.4
 docx2txt==0.8
 exceptiongroup==1.1.2
@@ -33,6 +35,7 @@ jsonschema==4.18.6
 jsonschema-specifications==2023.7.1
 langchain==0.0.253
 langsmith==0.0.19
+loguru==0.7.0
 lxml==4.9.3
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
@@ -48,12 +51,14 @@ openapi-schema-pydantic==1.2.4
 packaging==23.1
 pandas==2.0.3
 Pillow==10.0.0
+pinecone-client==2.2.2
 protobuf==4.23.4
 pyarrow==12.0.1
 pydantic==1.10.12
 pydantic_core==2.4.0
 pydeck==0.8.0
 Pygments==2.15.1
+pymongo==4.4.1
 Pympler==1.0.1
 pypdf==3.15.0
 PyPDF2==3.0.1
