--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,11 @@ click==8.1.6
 colorama==0.4.6
 dataclasses-json==0.5.14
 decorator==5.1.1
+dnspython==2.4.2
 docx==0.2.4
 docx2txt==0.8
 exceptiongroup==1.1.2
-faiss-gpu==1.7.2
+faiss-cpu==1.7.2
 fastapi==0.101.0
 filetype==1.2.0
 frozenlist==1.4.0
@@ -25,6 +26,7 @@ gitdb==4.0.10
 GitPython==3.1.32
 greenlet==2.0.2
 h11==0.14.0
+hurry.filesize==0.9
 idna==3.4
 importlib-metadata==6.8.0
 Jinja2==3.1.2
@@ -33,6 +35,7 @@ jsonschema==4.18.6
 jsonschema-specifications==2023.7.1
 langchain==0.0.253
 langsmith==0.0.19
+loguru==0.7.2
 lxml==4.9.3
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
@@ -48,7 +51,9 @@ openapi-schema-pydantic==1.2.4
 packaging==23.1
 pandas==2.0.3
 Pillow==10.0.0
+pinecone-client==2.2.4
 protobuf==4.23.4
+psycopg2==2.9.7
 pyarrow==12.0.1
 pydantic==1.10.12
 pydantic_core==2.4.0
@@ -61,6 +66,7 @@ python-dateutil==2.8.2
 python-docx==0.8.11
 python-dotenv==1.0.0
 python-magic==0.4.27
+python-magic-bin==0.4.14
 python-multipart==0.0.6
 python-pptx==0.6.21
 pytz==2023.3
@@ -92,6 +98,8 @@ urllib3==2.0.4
 uvicorn==0.23.2
 validators==0.20.0
 watchdog==3.0.0
+websockets==11.0.3
+win32-setctime==1.1.0
 XlsxWriter==3.1.2
 yarl==1.9.2
 zipp==3.16.2
